--- a/Teleasis-website/Views/Acasa/AcasaAdministrator.cshtml
+++ b/Teleasis-website/Views/Acasa/AcasaAdministrator.cshtml
@@ -271,8 +271,8 @@
           </div>
 
            <div class="modal-footer">
-           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Inchide</button>
-            <button class="btn btn-primary" type="submit">Adauga</button>
+           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Închide</button>
+            <button class="btn btn-primary" type="submit">Adaugă</button>
          </div>
         </form>
       </div>
