--- a/Teleasis-website/Views/Acasa/AdaugarePacient.cshtml
+++ b/Teleasis-website/Views/Acasa/AdaugarePacient.cshtml
@@ -182,7 +182,7 @@
             </fieldset>*@
 
                <div class="modal-footer butoane_adauga_pacient">
-                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Inchide</button>
+                   <button type="button" onclick="location.href='@Url.Action("AcasaMedic", "Acasa", new{medic_id = @ViewBag.IdMedic})'" class="btn btn-secondary" data-bs-dismiss="modal">Inchide</button>
                    <button class="btn btn-primary buton-adauga" type="submit">Adauga</button>
                </div>
         </form>
