--- a/Teleasis-website/Views/Acasa/AcasaMedic.cshtml
+++ b/Teleasis-website/Views/Acasa/AcasaMedic.cshtml
@@ -10,6 +10,15 @@
         </div>
     </div>
 
+    @if (TempData["Mesaj"] != null)  
+    {  
+        <script type="text/javascript">  
+            window.onload = function () {  
+                alert("@TempData["Mesaj"]");  
+            };  
+        </script>  
+    }  
+
     <div class="row linie_listaPacienti">
 
         <div class="col-3">
@@ -22,16 +31,16 @@
         </div>
 
         <div class="col-2">
-            <a type="button" class="buton_sortare"><img class="imagine_sortare" src="~/images/AZ.svg"/></a>
-@*            <a type="button" class="buton_sortare"><img class="imagine_sortare" src="~/images/ZA.svg"/></a>
-*@        </div>
+            <a type="button" onclick="sortare_az()" class="buton_sortare" id="buton_sortare_az"><img class="imagine_sortare" src="~/images/AZ.svg"/></a>
+            <a type="button" onclick="sortare_za()" class="buton_sortare" id="buton_sortare_za"><img class="imagine_sortare" src="~/images/ZA.svg"/></a>
+        </div>
         <div class="col-3"></div>
         <div class="col-2">
             <button class="btn btn-lg btn-block button-login button_home" type="button" onclick="location.href='@Url.Action("AdaugarePacient","Acasa",new { id_medic = @ViewBag.id_medic })'" >Adăugare pacient</button>
         </div>
         
         <div class="col-2">
-            <button class="btn btn-lg btn-block button-login button_home" type="submit" >Arhivă</button>
+            <button class="btn btn-lg btn-block button-login button_home" type="submit" onclick="location.href='@Url.Action("ArhivaPacienti","Acasa",new { id_medic = @ViewBag.id_medic })'">Arhivă</button>
         </div>
     </div>
 
@@ -101,11 +110,86 @@
             $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
           });
         });
-        // document.getElementById("search").addEventListener("keyup", function() {
-        //  var value = this.value.toLowerCase();
-        //  document.getElementById("tabel-pacienti tr").filter(function() {
-        //    this.toggle(this.text().toLowerCase().indexOf(value) > -1)
-        //  });
-        //});
+
+function sortare_az() {
+
+  var table, rows, switching, i, x, y, shouldSwitch;
+  table = document.getElementById("tabel-pacienti");
+  switching = true;
+  /* Make a loop that will continue until
+  no switching has been done: */
+  while (switching) {
+    // Start by saying: no switching is done:
+    switching = false;
+    rows = table.rows;
+    /* Loop through all table rows (except the
+    first, which contains table headers): */
+    for (i = 1; i < (rows.length - 1); i++) {
+      // Start by saying there should be no switching:
+      shouldSwitch = false;
+      /* Get the two elements you want to compare,
+      one from current row and one from the next: */
+      x = rows[i].getElementsByTagName("TD")[1];
+      y = rows[i + 1].getElementsByTagName("TD")[1];
+      // Check if the two rows should switch place:
+      if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
+        // If so, mark as a switch and break the loop:
+        shouldSwitch = true;
+        break;
+      }
+    }
+    if (shouldSwitch) {
+      /* If a switch has been marked, make the switch
+      and mark that a switch has been done: */
+      rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+      switching = true;
+    }
+  }
+
+    document.getElementById("buton_sortare_az").style.display = "none";
+    document.getElementById("buton_sortare_za").style.display = "initial";
+
+}
+
+function sortare_za() {
+
+  var table, rows, switching, i, x, y, shouldSwitch;
+  table = document.getElementById("tabel-pacienti");
+  switching = true;
+  /* Make a loop that will continue until
+  no switching has been done: */
+  while (switching) {
+    // Start by saying: no switching is done:
+    switching = false;
+    rows = table.rows;
+    /* Loop through all table rows (except the
+    first, which contains table headers): */
+    for (i = 1; i < (rows.length - 1); i++) {
+      // Start by saying there should be no switching:
+      shouldSwitch = false;
+      /* Get the two elements you want to compare,
+      one from current row and one from the next: */
+      x = rows[i].getElementsByTagName("TD")[1];
+      y = rows[i + 1].getElementsByTagName("TD")[1];
+      // Check if the two rows should switch place:
+      if (x.innerHTML.toLowerCase() < y.innerHTML.toLowerCase()) {
+        // If so, mark as a switch and break the loop:
+        shouldSwitch = true;
+        break;
+      }
+    }
+    if (shouldSwitch) {
+      /* If a switch has been marked, make the switch
+      and mark that a switch has been done: */
+      rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+      switching = true;
+    }
+  }
+
+    document.getElementById("buton_sortare_az").style.display = "initial";
+    document.getElementById("buton_sortare_za").style.display = "none";
+
+}
+
 
 </script>
