Recomandari, Interventii + inceput grafice

--- a/Teleasis-website/Views/Acasa/AcasaAdministrator.cshtml
+++ b/Teleasis-website/Views/Acasa/AcasaAdministrator.cshtml
@@ -163,7 +163,7 @@
                         <td>@(pacientiCereri.nume_pacient)</td>
                         <td>@(pacientiCereri.email_pacient)</td>
                         <td>
-                            <a id="adauga_pacienti" role="button" data-bs-toggle="modal"  data-bs-target="#adaugaModal" onclick=sendData("@(pacientiCereri.id_medic)#@(pacientiCereri.CNP)#@(pacientiCereri.prenume_pacient)#@(pacientiCereri.nume_pacient)#@(pacientiCereri.email_pacient)#@(pacientiCereri.judet_pacient)#@(pacientiCereri.oras_pacient)#@(pacientiCereri.strada_pacient)#@(pacientiCereri.numar_telefon_pacient)#@(pacientiCereri.profesie_pacient)#@(pacientiCereri.loc_de_munca_pacient)") class="btn btn-success btn-circle"><i class="fa-solid fa-plus"></i></a>
+                            <a id="adauga_pacienti" role="button" data-bs-toggle="modal"  data-bs-target="#adaugaModal" onclick=sendData("@(pacientiCereri.id_medic)#@(pacientiCereri.CNP)#@(pacientiCereri.prenume_pacient)#@(pacientiCereri.nume_pacient)#@(pacientiCereri.email_pacient)#@(pacientiCereri.judet_pacient)#@(pacientiCereri.oras_pacient)#@(pacientiCereri.strada_pacient)#@(pacientiCereri.numar_telefon_pacient)#@(pacientiCereri.profesie_pacient)#@(pacientiCereri.loc_de_munca_pacient)#@(pacientiCereri.id_ingrijitor)") class="btn btn-success btn-circle"><i class="fa-solid fa-plus"></i></a>
                         </td>
                         </tr>
 
